--- a/components/styles/variables.css
+++ b/components/styles/variables.css
@@ -1,13 +1,21 @@
+@font-face {
+    font-family: 'Odin Rounded';
+    src: url('../../assets/fonts/Hello-Kitty-Font/Odin\ Rounded\ -\ Bold.otf');
+}
+
 :root {
     --color1: #ed7aa8;
+    --mainFont: 'Odin-Bold' , sans-serif;
 }
 
     :root[data-theme="light"] {
-        --bgColor:#f9d3e3;
+        --bgColor1:#FDF2FA; 
+        --bgColor2:#FCEAF8; 
         --txtColor:#291e1c; 
     }
 
-    :root[data-theme="light"] {
-        --bgColor:#291e1c; 
-        --txtColor:#f9d3e3;
+    :root[data-theme="dark"] {
+        --bgColor1:#291e1c; 
+        --bgColor2:#3f3939; 
+        --txtColor:#FCEAF8;
     }
