--- a/components/styles/style.css
+++ b/components/styles/style.css
@@ -3,14 +3,87 @@ body{
     color: var(--txtColor);
 }
 
-    .page-title{
-        font-family: 'Odin Rounded';
-        text-transform: uppercase;
-
+    #header section {
     }
 
-    table, th, tr, thead, tbody{
+        .page-title {
+            font-family: var(--mainFont);
+            text-transform: uppercase;
+        }
+
+            label.theme-input {
+                display: block;
+                min-height: 100%;
+                background-color: var(--bgColor2);
+                padding: 7px;
+
+                display: flex;
+                align-items: center;
+                gap: 0;
+
+                border-radius: 50px;
+
+                overflow: hidden;
+
+                cursor: pointer;
+                transition: all 150ms;
+            }
+                label.theme-input::after {
+                    content: 'Mudar o Tema';
+                    white-space: nowrap;
+                    text-transform: uppercase;
+                    vertical-align: middle;
+                    font-family: var(--mainFont);
+                    font-size: .8em;
+                    opacity: 0;
+                    max-width: 0;
+                    overflow: hidden;
+                }
+                label.theme-input:hover {
+                    padding-right: 10px;
+                    padding-left: 10px;
+                    gap: 10px;
+
+                    scale: 1.05;
+                    transition: all 300ms;
+                }
+                label.theme-input:hover::after {
+                    max-width: 100%;
+                    opacity: 1;
+                }
+
+                .theme-input input[type="checkbox"] {
+                    display: none;
+                }
+
+                .theme-input img.icon {
+                    width: 30px;
+                    height: 30px;
+                }
+
+
+
+        .page-description {
+        }
+
+
+
+
+
+
+
+
+        
+
+
+
+
+
+    table, th, tr, thead, tbody, form{
         background-color: var(--bgColor2) !important;
+    }
+    form{
+        color: var(--txtColor);
     }
     thead th{
         background-color: var(--color1) !important;
