--- a/components/styles/style.css
+++ b/components/styles/style.css
@@ -6,64 +6,99 @@ body{
     #header section {
     }
 
-        .page-title {
-            font-family: var(--mainFont);
-            text-transform: uppercase;
+        div.titles{
+
         }
 
-            label.theme-input {
-                display: block;
-                min-height: 100%;
-                background-color: var(--bgColor2);
-                padding: 7px;
-
-                display: flex;
-                align-items: center;
-                gap: 0;
-
-                border-radius: 50px;
-
-                overflow: hidden;
-
-                cursor: pointer;
-                transition: all 150ms;
+            div.titles span#titleSymbol {
+                color: var(--color1);
+                text-shadow: 
+                    2px 0 var(--txtColor),
+                    0 2px var(--txtColor),
+                    -2px 0 var(--txtColor),
+                    0 -2px var(--txtColor);
             }
-                label.theme-input::after {
-                    content: 'Mudar o Tema';
-                    white-space: nowrap;
-                    text-transform: uppercase;
-                    vertical-align: middle;
-                    font-family: var(--mainFont);
-                    font-size: .8em;
-                    opacity: 0;
-                    max-width: 0;
-                    overflow: hidden;
-                }
-                label.theme-input:hover {
-                    padding-right: 10px;
-                    padding-left: 10px;
-                    gap: 10px;
+            div.titles .page-title {
+                font-family: var(--mainFont);
+                text-transform: uppercase;
+                color: var(--color1);
+                text-shadow: 
+                    2px 0 var(--txtColor),
+                    0 2px var(--txtColor),
+                    -2px 0 var(--txtColor),
+                    0 -2px var(--txtColor);
+            }
+            div.titles img#iconPhone {
+                height: 50px;
+                margin-left: 10px;
 
-                    scale: 1.05;
-                    transition: all 300ms;
-                }
-                label.theme-input:hover::after {
-                    max-width: 100%;
-                    opacity: 1;
-                }
-
-                .theme-input input[type="checkbox"] {
-                    display: none;
+                animation: giggle 5s infinite ease ;
+            }
+                :root[data-theme='dark'] 
+                div.titles img#iconPhone {
+                    filter: 
+                        drop-shadow( 1px 0 var(--txtColor) )
+                        drop-shadow( 0 1px var(--txtColor) )
+                        drop-shadow( -1px 0 var(--txtColor) )
+                        drop-shadow( 0 -1px var(--txtColor) );
                 }
 
-                .theme-input img.icon {
-                    width: 30px;
-                    height: 30px;
-                }
+        label.theme-input {
+            background-color: var(--bgColor2);
+            width: 50px;
+            height: 50px;
+            min-height: 100%;
+            padding: 10px;
+            
+            display: flex;
+            align-items: center;
+            gap: 10px;
 
+            border: 2px solid var(--txtColor);
+            border-radius: 50px;
 
+            overflow: hidden;
+            white-space: nowrap;
 
+            cursor: pointer;
+            transition: width 200ms ease-out;
+        }
+            label.theme-input::after {
+                content: 'Mudar o Tema';
+                width: 0;
+
+                font-size: .8em;
+                font-family: var(--mainFont);
+                text-transform: uppercase;
+                vertical-align: middle;
+            
+            }
+            label.theme-input:hover {
+                width: 150px;
+                padding-right: 10px;
+                padding-left: 10px;
+
+                scale: 1.05;
+            }
+            label.theme-input:hover::after {
+                width: auto;
+            }
+
+            .theme-input input[type="checkbox"] {
+                display: none;
+            }
+
+            .theme-input img.icon {
+                height: 100%;
+                filter: 
+                    drop-shadow( 1px 0 var(--txtColor) )
+                    drop-shadow( 0 1px var(--txtColor) )
+                    drop-shadow( -1px 0 var(--txtColor) )
+                    drop-shadow( 0 -1px var(--txtColor) );
+            }
+            
         .page-description {
+            font-size: 1.1em;
         }
 
 
@@ -93,3 +128,12 @@ body{
     th{
         color: var(--txtColor) !important;
     }
+
+@keyframes giggle {
+    from, to{
+        transform: rotate(-20deg);
+    }
+    50%{
+        transform: rotate(20deg);
+    }
+}
