--- a/components/styles/formModal.css
+++ b/components/styles/formModal.css
@@ -25,6 +25,7 @@ div.modal-header {
 
     div.modal-header img.form-title-icon{
         width: 50px;
+        animation: giggle-soft 3s infinite ease ;
     }
 
     :root[data-theme="dark"]
@@ -81,7 +82,7 @@ section#form-card{
         }
             section.radio-area input[type='radio'] + label{
                 background-color: var(--bgColor2);
-                padding: 3px;
+                padding: 5px;
                 
                 font-size: .85em;
                 font-family: var(--txtFont);
@@ -91,17 +92,17 @@ section#form-card{
                 
                 border-radius: 50px;
 
+                outline: 1px solid transparent;
                 flex-grow: 1;
 
                 cursor: pointer;
-                transition: all 200ms;
+                transition: all 200ms ease-out;
             }
                 section.radio-area input[type='radio'] + label:hover{
-                    border: 1px dashed var(--txtColor);
-                    scale: 1.03;
+                    outline: 1px dashed var(--txtColor);
                 }
             section.radio-area input[type='radio']:checked + label{
-                border: 1px solid var(--txtColor);
+                outline: 1px solid var(--txtColor);
                 scale: 1.05;
                 
                 position: relative;
@@ -118,6 +119,8 @@ section#form-card{
             }
                 section.radio-area input[type='radio']:checked + label img.checkedIcon{
                     display: inline;
+
+                    animation: pop-up 200ms forwards;
                 }
 
     form.task-form button#submitBtn{
@@ -129,9 +132,9 @@ section#form-card{
         border-radius: 50px;
         
         color: var(--txtColor);
-        font-size: 1.1em;
+        font-size: 1em;
         font-family: var(--mainFont);
-        font-variant: small-caps;
+        text-transform: uppercase;
         
         transition: all 250ms;
     }
@@ -140,5 +143,39 @@ section#form-card{
             scale: 1.05;
         }
         
+      
         
 
+
+@keyframes pop-up {
+    from{
+        scale: 3;
+        opacity: 0;
+    }
+    90%{
+        scale: .8;
+        opacity: 100;
+    }
+    to{
+        scale: 1;
+    }
+}
+
+
+@keyframes giggle-wide {
+    from, to{
+        transform: rotate(-20deg);
+    }
+    50%{
+        transform: rotate(20deg);
+    }
+}
+
+@keyframes giggle-soft {
+    from, to{
+        transform: rotate(-10deg);
+    }
+    50%{
+        transform: rotate(10deg);
+    }
+}
