Comeco da Aplicacao de filtros

--- a/components/styles/style.css
+++ b/components/styles/style.css
@@ -343,7 +343,7 @@ body{
                             background-color: var(--red);
                         }
                         th.task-priority
-                        span.media{
+                        span.média{
                             background-color: var(--yellow);
                         }
                         th.task-priority
