--- a/components/styles/formModal.css
+++ b/components/styles/formModal.css
@@ -161,6 +161,12 @@ section#form-card{
     }
 }
 
+@keyframes fade-color {
+    to{
+        opacity: .5;
+    }
+}
+
 
 @keyframes giggle-wide {
     from, to{
